syntax = "proto3";

package input;

import "src/prover-input/proto/transaction.proto";

option go_package = "github.com/kkrt-labs/zk-pig/src/prover-input/proto";

message Extra {
  repeated AccessTuple access_list = 1;
  repeated StateDiff state_diffs = 2;
  repeated bytes committed = 3;
}

message StateDiff {
  bytes address = 1;
  Account pre_account = 2;
  Account post_account = 3;
  repeated StorageDiff storage = 4;
}

message StorageDiff {
  bytes slot = 1;
  bytes pre_value = 2;
  bytes post_value = 3;
}

message Account {
  bytes balance = 1;
  bytes code_hash = 2;
  uint64 nonce = 3;
  bytes storage_hash = 4;
}

